# Kernel-Offloading-for-Enhanced-SOME-IP-SD-Performance

./: dpdk 컴파일방법.txt  dpdk.c  netfilter.c  xdp 컴파일방법.txt  xdp.c
vsomeip_Application/: CMakeLists.txt  TestClient.cpp  TestServer.cpp  expt  sample-ids.hpp
vsomeip_Application/config/: vsomeip-client.json  vsomeip-local.json  vsomeip-server.json
vsomeip_dpdk/: someip_dpdk  someip_dpdk.c
vsomeip_netfilter/: Makefile  sub_offload_mod.c  sub_offload_mod.ko  sub_offload_mod.mod  sub_offload_mod.mod.c
vsomeip_xdp/: someip_sd_xdp.c
